--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "~4.16.0",
     "lodash.pick": "^4.4.0",
     "mongoose": "^5.4.0",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "validator": "^10.10.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
