--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "lodash.isempty": "^4.4.0",
     "lodash.pick": "^4.4.0",
     "mongoose": "^5.4.0",
     "morgan": "~1.9.0",
