--- a/package.json
+++ b/package.json
@@ -6,7 +6,25 @@
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "app/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --single-quote --write",
+      "git add"
+    ],
+    "app/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
+  },
   "dependencies": {
+    "husky": "^1.1.3",
+    "jsonwebtoken": "^8.3.0",
+    "lint-staged": "^8.0.4",
     "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
