--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash.pick": "^4.4.0",
     "mongoose": "^5.4.0",
     "morgan": "~1.9.0",
+    "redis": "^2.8.0",
     "validator": "^10.10.0"
   },
   "devDependencies": {
