--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,27 +5,29 @@ services:
     restart: always
     build: .
     ports:
-      - '80:5000'
-      - '8731:5000'
+      - '8000:5000'
+      # - '80:5000'
     links:
-      - mongodb
+      - mongo
       - redis
     environment:
       PORT: 5000
       REDIS_HOST: redis
-      MONGO_HOST: mongodb:27017/madams-express
+      MONGO_HOST: mongo:27017/madams
+      MONGO_USERNAME: madams
+      MONGO_PASSWORD: madadadadam173
 
-  mongodb:
+  mongo:
     container_name: madams-mongo
     image: mongo
     ports:
       - '27017:27017'
     volumes:
-      - /data/db:/data/db
-      - /Users/herlambang/mongo-data/db:/data/db
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: madams
-      MONGO_INITDB_ROOT_PASSWORD: madadadadam173
+      - /Users/herlambang/data/db:/data/db
+    #   # - /data/db:/data/db
+    # environment:
+    #   MONGO_INITDB_ROOT_USERNAME: madams
+    #   MONGO_INITDB_ROOT_PASSWORD: madadadadam173
 
   redis:
     container_name: madams-redis
