--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,31 @@
-version: '3'
+version: '3.4'
+
+x-common-variables: &common-variables
+  PORT: 5000
+  REDIS_HOST: redis
+  MONGO_HOST: mongo:27017/madams
+  SECRET_SAUCE: ajdasjdajksdbanwdxungudwxdnyuwedeyudgweyugdwuyegdygwdygwgyegwygygybchebxbexybeygdywguyfbeufw
+  MONGO_INITDB_ROOT_USERNAME: madams
+  MONGO_INITDB_ROOT_PASSWORD: password123
+  MONGO_INITDB_DATABASE: madams
+
 services:
   mongo:
     container_name: madams-mongo
     image: mongo
+    networks:
+      - madamsnet
     ports:
       - '27017:27017'
     volumes:
-      - /Users/herlambang/data/db:/data/db
-    #   # - /data/db:/data/db
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: madams
-      MONGO_INITDB_ROOT_PASSWORD: madadadadam173
+      - /data/db:/data/db
+    environment: *common-variables
 
   redis:
     container_name: madams-redis
     image: redis
+    networks:
+      - madamsnet
     ports:
       - '6379:6379'
 
@@ -23,14 +34,9 @@ services:
     restart: always
     build: .
     ports:
-      - '8000:5000'
-      # - '80:5000'
-    links:
-      - mongo
-      - redis
-    environment:
-      PORT: 5000
-      REDIS_HOST: redis
-      MONGO_HOST: mongo:27017/madams
-      MONGO_USERNAME: madams
-      MONGO_PASSWORD: madadadadam173
+      - '80:5000'
+    networks:
+      - madamsnet
+    environment: *common-variables
+networks:
+  madamsnet
