--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,21 @@
 version: '3.4'
 
-x-common-variables: &common-variables
-  PORT: 5000
-  REDIS_HOST: redis
-  MONGO_HOST: mongo:27017/madams
-  SECRET_SAUCE: ajdasjdajksdbanwdxungudwxdnyuwedeyudgweyugdwuyegdygwdygwgyegwygygybchebxbexybeygdywguyfbeufw
-  MONGO_INITDB_ROOT_USERNAME: madams
-  MONGO_INITDB_ROOT_PASSWORD: password123
-  MONGO_INITDB_DATABASE: madams
-
 services:
   mongo:
     container_name: madams-mongo
     image: mongo
+    env_file: .env
     networks:
       - madamsnet
     ports:
       - '27017:27017'
     volumes:
       - /data/db:/data/db
-    environment: *common-variables
 
   redis:
     container_name: madams-redis
     image: redis
+    env_file: .env
     networks:
       - madamsnet
     ports:
@@ -32,11 +24,12 @@ services:
   app:
     container_name: madams-app
     restart: always
+    env_file: .env
     build: .
     ports:
       - '80:5000'
     networks:
       - madamsnet
-    environment: *common-variables
+
 networks:
   madamsnet:
