--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-graphql": "^0.7.1",
+    "graphql": "^14.0.2",
     "husky": "^1.1.3",
     "jsonwebtoken": "^8.4.0",
     "lint-staged": "^8.0.4",
