--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "husky": "^1.1.3",
     "jsonwebtoken": "^8.4.0",
     "lint-staged": "^8.0.4",
+    "lodash": "^4.17.11",
     "lodash.isempty": "^4.4.0",
     "lodash.pick": "^4.4.0",
     "mongoose": "^5.4.0",
