--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,9 @@
     "moment": "^2.23.0",
     "node-sass": "^4.10.0",
     "prettier": "^1.15.1",
-    "react": "^16.6.1",
+    "react": "next",
     "react-dates": "^18.3.1",
-    "react-dom": "^16.6.1",
+    "react-dom": "next",
     "react-highlight": "^0.12.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
