--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.23",
     "classnames": "^2.2.6",
     "downshift": "^3.1.5",
     "gh-pages": "^2.0.1",
+    "graphql": "^14.0.2",
     "husky": "^1.1.3",
     "invoker-base": "^1.0.3",
     "invoker-layout": "^1.0.0",
@@ -15,6 +17,7 @@
     "node-sass": "^4.10.0",
     "prettier": "^1.15.1",
     "react": "next",
+    "react-apollo": "^2.3.3",
     "react-dates": "^18.3.1",
     "react-dom": "next",
     "react-highlight": "^0.12.0",
