--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon --exec babel-node ./bin/www"
   },
   "husky": {
     "hooks": {
@@ -41,6 +41,9 @@
     "validator": "^10.10.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-2": "^6.24.1",
     "nodemon": "^1.18.9"
   }
 }
