--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "express": "~4.16.0",
     "express-graphql": "^0.7.1",
     "graphql": "^14.0.2",
+    "graphql-date": "^1.0.3",
+    "graphql-iso-date": "^3.6.1",
     "husky": "^1.1.3",
     "jsonwebtoken": "^8.4.0",
     "lint-staged": "^8.0.4",
