--- a/client/package.json
+++ b/client/package.json
@@ -6,16 +6,20 @@
     "apollo-boost": "^0.1.23",
     "classnames": "^2.2.6",
     "downshift": "^3.1.5",
+    "draft-js": "^0.10.5",
+    "formik": "^1.4.1",
     "gh-pages": "^2.0.1",
+    "glamor": "^2.20.40",
     "graphql": "^14.0.2",
     "husky": "^1.1.3",
-    "invoker-base": "^1.0.3",
+    "invoker-base": "^1.0.4",
     "invoker-layout": "^1.0.0",
     "invoker-tokens": "^1.0.7",
     "lint-staged": "^8.0.4",
     "moment": "^2.23.0",
     "node-sass": "^4.10.0",
     "prettier": "^1.15.1",
+    "prismjs": "^1.15.0",
     "react": "next",
     "react-apollo": "^2.3.3",
     "react-dates": "^18.3.1",
