--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.1.23",
+    "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "downshift": "^3.1.5",
     "draft-js": "^0.10.5",
@@ -25,8 +26,10 @@
     "react-dates": "^18.3.1",
     "react-dom": "next",
     "react-highlight": "^0.12.0",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
