--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-graphql": "^0.7.1",
